--- a/static.html
+++ b/static.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mini-Shop</title>
     <link rel="stylesheet" href="assets/styles/app.css" />
-    <script src="assets/scripts/app.js" defer=""></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script type="module" src="assets/scripts/app.js" defer></script>
     <link
       href="chrome-extension://idpbkophnbfijcnlffdmmppgnncgappc/css/content.css"
       rel="stylesheet"
