add Step3 - Product List

--- a/static.html
+++ b/static.html
@@ -19,36 +19,7 @@
         <h2>Total: $0</h2>
         <button>Order Now!</button>
       </section>
-      <ul class="product-list" id="prod-list">
-        <li class="product-item">
-          <div>
-            <img
-              src="https://www.maxpixel.net/static/photo/2x/Soft-Pillow-Green-Decoration-Deco-Snuggle-1241878.jpg"
-              alt="A Pillow"
-            />
-            <div class="product-item__content">
-              <h2>A Pillow</h2>
-              <h3>$19.99</h3>
-              <p>A soft pillow!</p>
-              <button>Add to Cart</button>
-            </div>
-          </div>
-        </li>
-        <li class="product-item">
-          <div>
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Ardabil_Carpet.jpg/397px-Ardabil_Carpet.jpg"
-              alt="A Carpet"
-            />
-            <div class="product-item__content">
-              <h2>A Carpet</h2>
-              <h3>$89.99</h3>
-              <p>A carpet which you might like - or not.</p>
-              <button>Add to Cart</button>
-            </div>
-          </div>
-        </li>
-      </ul>
+      <ul class="product-list" id="prod-list"></ul>
     </div>
   </body>
 </html>
