add Step4 - ShoppingCart

--- a/static.html
+++ b/static.html
@@ -15,10 +15,7 @@
   </head>
   <body>
     <div id="app">
-      <section class="cart">
-        <h2>Total: $0</h2>
-        <button>Order Now!</button>
-      </section>
+      <section class="cart"></section>
       <ul class="product-list" id="prod-list"></ul>
     </div>
   </body>
