--- a/static.html
+++ b/static.html
@@ -7,16 +7,11 @@
     <link rel="stylesheet" href="assets/styles/app.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script type="module" src="assets/scripts/app.js" defer></script>
-    <link
+    <!-- <link
       href="chrome-extension://idpbkophnbfijcnlffdmmppgnncgappc/css/content.css"
       rel="stylesheet"
       type="text/css"
-    />
+    /> -->
   </head>
-  <body>
-    <div id="app">
-      <section class="cart"></section>
-      <ul class="product-list" id="prod-list"></ul>
-    </div>
-  </body>
+  <body></body>
 </html>
