--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mini-Shop</title>
-    <link rel="stylesheet" href="assets/styles/app.css">
-  </head> 
-  <body>
-    <div id="app"></div>
-  </body>
-  <script type="module" src="assets/scripts/app.js" defer></script>
+    <link rel="stylesheet" href="assets/styles/app.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script type="module" src="assets/scripts/app.js" defer></script>
+  </head>
+  <body></body>
 </html>
